tweaked css to prevent playlist scrollbars

--- a/cons/static/style_playlist.css
+++ b/cons/static/style_playlist.css
@@ -12,6 +12,8 @@
 	border:1px solid #ccc;
 	background-color:#efefef;
 	margin-top:20px;
+    margin-bottom:10px;
+    padding-bottom:5px;
     text-align:center;
 }
 
